--- a/crates/noir-sha1/Nargo.toml
+++ b/crates/noir-sha1/Nargo.toml
@@ -2,5 +2,5 @@
 name = "sha1"
 type = "lib"
 authors = ["@michaelelliot"]
-compiler_version = "0.10.5"
+compiler_version = ">=0.16.0"
 license = "MIT"
