--- a/example/Nargo.toml
+++ b/example/Nargo.toml
@@ -2,7 +2,7 @@
 name = "sha1_example"
 type = "bin"
 authors = ["@michaelelliot"]
-compiler_version = "0.10.5"
+compiler_version = ">=0.16.0"
 
 [dependencies]
 sha1 = { path = "../crates/noir-sha1" }
